--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "~4.4.19",
     "nodemon": "~1.9.2",
     "bootstrap": "~3.3.6",
-    "angular-route": "~1.5.6"
+    "angular-route": "~1.5.6",
+    "multer": "~1.1.0"
   }
 }
