--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "nodemon": "~1.9.2",
     "bootstrap": "~3.3.6",
     "angular-route": "~1.5.6",
-    "multer": "~1.1.0"
+    "multer": "~1.1.0",
+    "busboy": "~0.2.13",
+    "connect-busboy": "0.0.2",
+    "fs": "0.0.2",
+    "util": "~0.10.3"
   }
 }
